# futurense-leaderboards

./: .env  .gitignore  17thJanATTData.xlsx  19thDailyActivities.xlsx  20thDailyActivities.xlsx  21thDailyActivities.xlsx  attFinder.py  attendanceReport.xlsx  dataFeeder.py  emailTemplate.html  exportCSV.py  main copy.py  main.py  pyproject.toml  requirements.txt  supabaseSQLCODE.sql  userFeeder.py  userPassGen.py
data/: allData.xlsx  pointsData.csv  pointsData.xlsx  trial.xlsx  trialData.csv  trialData.xlsx  userData.xlsx  year1users.xlsx  year2user.xlsx
leaderBoards/data/: userData.xlsx
leaderBoards/static/js/: login.js
leaderBoards/templates/: login.html  welcome.html
leaderBoards/toolBox/: dataFeeder.py  dataUpdater.py
static/css/: analytics.css  attendance.css  login copy.css  login.css  pandas-courses.css  sql-courses copy.css  sql-courses.css  styles.css  tracker.css  videos.css  welcome copy.css  welcome.css
static/js/: analytics.js  attendance.js  background.js  login.js  pandas-courses.js  sql-courses copy.js  sql-courses.js  tracker.js  videos.js  welcome copy.js  welcome.js
templates/: analytics.html  attendance.html  forgotPass.html  login.html  maintainence.html  pandas-course.html  sql-course copy.html  sql-course.html  tracker.html  update-password.html  videos.html  welcome.html
toolBox/: dataFeeder.py  dataManipulator.py  dataUpdater.py  userFeeder.py
